apps/media/jellyfin/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-external
  namespace: media
  labels:
    external-dns.edgard.org/scope: external
    hajimari.edgard.org/icon: mdi:play-circle
    hajimari.edgard.org/enabled: "true"
spec:
  parentRefs:
    - name: external
      namespace: platform-system
      sectionName: https
  hostnames:
    - jellyfin.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-internal
  namespace: media
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
    - name: internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - jellyfin.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jellyfin-external-auth
  namespace: media
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jellyfin-external
  oidc:
    provider:
      issuer: https://id.edgard.org
    clientID: envoy-gateway
    clientSecret:
      name: envoy-oidc-client
    redirectURL: https://jellyfin.edgard.org/oauth2/callback
    logoutPath: /oauth2/logout
    cookieDomain: edgard.org
    scopes:
      - openid
      - profile
      - email
